# StellarSwipe-Contract

./: ANALYTICS_ENGINE_SUMMARY.md  CHANGELOG_REWARD_OPTIMIZATION.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  REWARD_OPTIMIZATION_SUMMARY.md  SECURITY.md  SECURITY_PROGRAM_COMPLETE.md  SECURITY_PROGRAM_SUMMARY.md
.github/workflows/: ci.yml  kani.yml  sdk-rent-benchmark.yml
contracts/fee_collector/src/: gas_optimization_tests.rs  rewards_optimized.rs
contracts/signal_registry/src/: analytics_engine.rs
contracts/stake_vault/src/: gas_optimization_tests.rs  (+1 more)
docs/: ARCHITECTURE.md  CODE_EXAMPLES.md  CONTRACT_DEVELOPMENT_GUIDE.md  INTEGRATION_TUTORIALS.md  SECURITY_BEST_PRACTICES.md  TROUBLESHOOTING.md  analytics_api_reference.md  analytics_engine.md  chaos_test.md  conviction_calibration_guide.md  frontend_integration.md  incident_response.md  reward_distribution_optimization.md  reward_optimization_benchmarks.md  reward_optimization_quick_reference.md  source-verification.md
docs/security/: disclosure_timeline_guidelines.md  hall_of_fame.md  pgp-key.asc  researcher_resources.md  responsible_disclosure_process.md  vulnerability_tracking_system.md
stellar-swipe/: Cargo.toml  deny.toml
stellar-swipe/.cargo/: config.toml
stellar-swipe/abi-baselines/: README.md
stellar-swipe/baselines/: instruction_budget_baseline.json
stellar-swipe/contracts/analytics/src/: lib.rs
stellar-swipe/contracts/auto_trade/: Cargo.toml
stellar-swipe/contracts/auto_trade/src/: admin.rs  amm_bridge.rs  conditional.rs  correlation.rs  errors.rs  escrow.rs  exit_strategy.rs  kyc.rs  lib.rs  logging.rs  loss_streak.rs  oracle.rs  rate_limit.rs  risk.rs  storage.rs  test.rs  test_admin_transfer.rs  test_dead_mans_switch.rs  test_oracle_whitelist.rs  twap.rs
stellar-swipe/contracts/auto_trade/src/strategies/: arbitrage.rs  dca.rs  mean_reversion.rs  mod.rs  momentum.rs  pairs_trading.rs  sentiment.rs
stellar-swipe/contracts/auto_trade/tests/integration/: test_amm_bridge.rs  test_contract_upgrade.rs
stellar-swipe/contracts/auto_trade/tests/load/: test_high_volume.rs  test_perf_regression.rs
stellar-swipe/contracts/bridge/src/: fees.rs  lib.rs  messaging.rs  monitoring.rs
stellar-swipe/contracts/common/: Cargo.toml
stellar-swipe/contracts/common/fuzz/: Cargo.toml
stellar-swipe/contracts/common/fuzz/fuzz_targets/: governance_payload.rs  storage_key_derivation.rs  xdr_roundtrip.rs
stellar-swipe/contracts/common/src/: amm_bridge.rs  budget_regression.rs  checked_amount.rs  commit_reveal.rs  lib.rs  multisig.rs  panic_codes.rs  perf.rs  rate_limit.rs  replay_protection.rs  retry_backoff.rs  storage_crud.rs  storage_key_tests.rs  ttl_manager.rs
stellar-swipe/contracts/fee_collector/: build.rs
stellar-swipe/contracts/fee_collector/src/: events.rs  lib.rs  rebates.rs  reports.rs  storage.rs  test.rs
stellar-swipe/contracts/fee_collector/src/tests/: property_tests.rs
stellar-swipe/contracts/governance/src/: committees.rs  conviction_voting.rs  errors.rs  lib.rs  proposals.rs  quadratic_voting.rs  reputation.rs  test.rs  test_pause_propagation.rs  timelock.rs  treasury.rs
stellar-swipe/contracts/integration_tests/: Cargo.toml
stellar-swipe/contracts/integration_tests/tests/integration/: test_chaos_ordering.rs  test_complete_user_journey.rs  test_contract_upgrade.rs  test_multisig_governance.rs  test_signal_to_reward_lifecycle.rs
stellar-swipe/contracts/oracle/: Cargo.toml
stellar-swipe/contracts/oracle/src/: conversion.rs  errors.rs  events.rs  governance.rs  history.rs  lib.rs  multi_hop.rs  storage.rs  test.rs  test_admin_transfer.rs  types.rs
stellar-swipe/contracts/shared/src/: access_control.rs  asset_registry.rs  auth.rs  cross_contract.rs  events.rs  lib.rs  liquidity_pool.rs  math.rs  pausable.rs  rate_limiter.rs  version.rs
stellar-swipe/contracts/signal_registry/src/: admin.rs  analytics.rs  audit_log.rs  churn_risk.rs  community_voting.rs  contests.rs  cross_chain.rs  errors.rs  events.rs  leaderboard.rs  lib.rs  migration.rs  ml_scoring.rs  multisig_approvals.rs  performance.rs  providers.rs  query.rs  reports.rs  reputation.rs  scheduling.rs  scoring.rs  storage_layout_tests.rs  storage_monitor.rs  submission.rs  test.rs  test_admin_transfer.rs  test_contests.rs  test_emergency.rs  test_multisig_approval.rs  test_reputation.rs  test_scheduling.rs  test_signal_issues.rs  test_versioning.rs  types.rs  validation.rs  versioning.rs
stellar-swipe/contracts/signal_registry/src/tests/: mod.rs  test_reentrancy.rs  test_signal_lifecycle.rs
stellar-swipe/contracts/stake_vault/: Cargo.toml
stellar-swipe/contracts/stake_vault/src/: lib.rs  migration.rs  tests.rs
stellar-swipe/contracts/stake_vault_kani/: Cargo.toml
stellar-swipe/contracts/stake_vault_kani/src/: lib.rs
stellar-swipe/contracts/trade_executor/src/: dca.rs  errors.rs  feature_flags.rs  lib.rs  priority.rs  risk_gates.rs  sdex.rs  test.rs  triggers.rs
stellar-swipe/contracts/trade_executor/src/tests/: mod.rs  test_feature_flags.rs  test_grace_period.rs  test_latency_benchmark.rs  test_market_simulation.rs  test_storage_rent_benchmark.rs
stellar-swipe/contracts/user_portfolio/: Cargo.toml
stellar-swipe/contracts/user_portfolio/src/: achievements.rs  badges.rs  lib.rs  migration.rs  preferences.rs  queries.rs  storage.rs  subscriptions.rs
stellar-swipe/contracts/user_portfolio/src/tests/: mod.rs  property_tests.rs  test_pnl.rs
stellar-swipe/contracts/user_portfolio/tests/: premium_signal_gating.rs
stellar-swipe/docs/: cross_contract_auth.md  cross_contract_patterns.md  governance_pause_semantics.md  multisig_governance.md
stellar-swipe/error-baselines/: auto_trade.json  bridge.json  common.json  fee_collector.json  governance.json  oracle.json  shared.json  signal_registry.json  stake_vault.json  trade_executor.json  user_portfolio.json
stellar-swipe/scripts/: build.sh  check_budget_baseline.py  check_error_codes.py  check_wasm_exports.py  deploy_testnet.sh  embed_source_hash.sh  scaffold_contract.sh  update_budget_baseline.sh
stellar-swipe/storage-snapshots/: README.md
