[package]
name = "stellar_swipe_common"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[lints]
workspace = true
