[package]
name = "stellar-swipe-common-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

# cargo-fuzz requires a nightly toolchain.
# Install: rustup toolchain install nightly
# Run:     cargo +nightly fuzz run storage_key_derivation -- -max_total_time=60
#
# CI: cargo +nightly fuzz run storage_key_derivation -- -max_total_time=30 -timeout=10

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
soroban-sdk = { version = "23", features = ["testutils"] }

[dev-dependencies]
stellar_swipe_common = { path = "..", features = ["testutils"] }

[[bin]]
name = "storage_key_derivation"
path = "fuzz_targets/storage_key_derivation.rs"
test = false
doc = false

[[bin]]
name = "xdr_roundtrip"
path = "fuzz_targets/xdr_roundtrip.rs"
test = false
doc = false

[lints.rust]
# Fuzzing harnesses intentionally exercise panic paths.
dead_code = "allow"
unused_variables = "allow"
